    dispatch function::

      @reg.dispatch('a')
      def foo(a):
        ...

      def foo_implementation(a):
        ...

      foo.register(foo_implementation, a=Document)

  * Caching is now per dispatch function, not globally per lookup. You
    can pass a ``get_key_lookup`` function that wraps
    ``reg.PredicateRegistry`` instance inside a
    ``reg.CachingKeyLookup`` cache.

  * The whole concept of a "lookup" is gone:

    * ``reg.implicit`` is gone: everything is explicit. There is no more
      implicit lookup.

    * ``reg.Lookup`` itself is gone -- its now implemented directly in the
      dispatch object, but was already how you accessed it.

    * The special ``lookup`` argument to pass through the current
      ``Lookup`` is gone. If you need context-dependent dispatch, you
      use dispatch methods.

    * If you need context dependent dispatch, where the functions
      being dispatched to depend on application context (such as
      Morepath's application mounting), you use
      ``reg.dispatch_method`` to create a dispatch method. A dispatch
      method maintains an entirely separate dispatch registry for each
      subclass. You use ``reg.methodify`` to register a dispatch
      function that takes an optional context first argument.

  If you do not use the context-dependent dispatch feature, then to
  upgrade your code:

  * remove any ``reg.set_implicit`` from your code, setup of
    ``Lookup`` and the like.

  * If you use an explicit ``lookup`` argument you can just remove them.

  * You also need to change your registration code: no more
    ``reg.Registry`` setup.

  * Change your registrations to be on the dispatch objects itself
    using ``Dispatch.register``.

  * To enable caching you need to set up ``get_key_lookup`` on the
    dispatch functions. You can create a partially applied version of
    ``dispatch`` to make this less verbose::

       import reg
       from functools import partial
