@@ -1,8 +1,8 @@
 from __future__ import unicode_literals
 from ..predicate import (PredicateRegistry, SingleValueRegistry,
                          class_predicate,
-                         match_instance, match_key,
-                         CachingKeyLookup)
+                         match_instance, match_key)
+from ..cache import DictCachingKeyLookup, LruCachingKeyLookup
 from ..error import RegistrationError
 from ..dispatch import dispatch
 import pytest
@@ -176,7 +176,7 @@ def test_register_twice_without_predicates():
         reg.register((), 'twice')
 
 
-def test_caching_registry():
+def test_dict_caching_registry():
     class Foo(object):
         pass
 
@@ -202,7 +202,107 @@ def test_caching_registry():
         return "Request method fallback"
 
     def get_caching_key_lookup(r):
-        return CachingKeyLookup(r, 100, 100, 100)
+        return DictCachingKeyLookup(r)
+
+    @dispatch(
+        match_instance('model', get_model, model_fallback),
+        match_key('name', get_name, name_fallback),
+        match_key('request_method', get_request_method,
+                  request_method_fallback),
+        get_key_lookup=get_caching_key_lookup)
+    def view(self, request):
+        raise NotImplementedError()
+
+    def foo_default(self, request):
+        return "foo default"
+
+    def foo_post(self, request):
+        return "foo default post"
+
+    def foo_edit(self, request):
+        return "foo edit"
+
+    view.register_value((Foo, '', 'GET'), foo_default)
+    view.register_value((Foo, '', 'POST'), foo_post)
+    view.register_value((Foo, 'edit', 'POST'), foo_edit)
+
+    class Request(object):
+        def __init__(self, name, request_method):
+            self.name = name
+            self.request_method = request_method
+
+    assert view(Foo(), Request('', 'GET')) == 'foo default'
+    assert view(
+        FooSub(), Request('', 'GET')) == 'foo default'
+    assert view(
+        FooSub(), Request('edit', 'POST')) == 'foo edit'
+
+    # use a bit of inside knowledge to check the cache is filled
+    assert view.key_lookup.component_cache.get(
+        (Foo, '', 'GET')) is not None
+    assert view.key_lookup.component_cache.get(
+        (FooSub, '', 'GET')) is not None
+    assert view.key_lookup.component_cache.get(
+        (FooSub, 'edit', 'POST')) is not None
+
+    # now let's do this again. this time things come from the component cache
+    assert view(Foo(), Request('', 'GET')) == 'foo default'
+    assert view(FooSub(), Request('', 'GET')) == 'foo default'
+    assert view(FooSub(), Request('edit', 'POST')) == 'foo edit'
+
+    key_lookup = view.key_lookup
+    # prime and check the all cache
+    assert list(view.all(Foo(), Request('', 'GET'))) == [foo_default]
+    assert key_lookup.all_cache.get(
+        (Foo, '', 'GET')) is not None
+    # should be coming from cache now
+    assert list(view.all(Foo(), Request('', 'GET'))) == [foo_default]
+
+    class Bar(object):
+        pass
+    assert view(Bar(), Request('', 'GET')) == 'Model fallback'
+    assert view(Foo(), Request('dummy', 'GET')) == 'Name fallback'
+    assert view(Foo(), Request('', 'PUT')) == 'Request method fallback'
+    assert view(FooSub(), Request('dummy', 'GET')) == 'Name fallback'
+
+    # fallbacks get cached too
+    assert key_lookup.fallback_cache.get(
+        (Bar, '', 'GET')) is model_fallback
+
+    # these come from the fallback cache now
+    assert view(Bar(), Request('', 'GET')) == 'Model fallback'
+    assert view(Foo(), Request('dummy', 'GET')) == 'Name fallback'
+    assert view(Foo(), Request('', 'PUT')) == 'Request method fallback'
+    assert view(FooSub(), Request('dummy', 'GET')) == 'Name fallback'
+
+
+def test_lru_caching_registry():
+    class Foo(object):
+        pass
+
+    class FooSub(Foo):
+        pass
+
+    def get_model(self):
+        return self
+
+    def get_name(request):
+        return request.name
+
+    def get_request_method(request):
+        return request.request_method
+
+    def model_fallback(self, request):
+        return "Model fallback"
+
+    def name_fallback(self, request):
+        return "Name fallback"
+
+    def request_method_fallback(self, request):
+        return "Request method fallback"
+
+    def get_caching_key_lookup(r):
+        return LruCachingKeyLookup(r, 100, 100, 100)
 
     @dispatch(
         match_instance('model', get_model, model_fallback),
